RecipeDictionaryApi/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  type: ClusterIP
  sessionAffinity: None
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
